# conductor-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  PERFORMANCE_ANALYSIS.md  PHASE1_HEURISTIC_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_OLLAMA_INTEGRATION_SUMMARY.md  Procfile  README.md  TODO.md  diagnose_api_performance.py  diagnose_contention.py  pyproject.toml  requirements.txt  test_phase3_ollama_integration.py  test_queue_summarization.py
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BACKGROUND_SUMMARIZATION_PLAN.md  CHROMA_SETUP.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  MCP_SERVER.md  PHASE1_COMPLETION_SUMMARY.md  PHASE3_TREE_SITTER_IMPLEMENTATION_PLAN.md
docs/plans/: 2026-02-06-jsonl-conversation-chunker.md  DASHBOARD_UX_ENHANCEMENTS.md  IMPLEMENTATION_CONTEXT_ENHANCEMENT_PLAN.md  SUMMARIZATION_ENHANCEMENT_PLAN.md  dashboard-ux-redesign.md
examples/: basic_usage.py  config_example.json
scripts/: benchmark_models.py  build_exe.bat  conductor-memory.sh  install-linux.sh  install-service-nssm.ps1  install-service.ps1  install-windows.ps1  migrate_to_postgres.py  reset_chroma.py  setup_postgres.py  start.ps1  start_mcp.bat  start_mcp_sse.bat  start_server.py  test_postgres_connection.py
src/conductor_memory/: __init__.py
src/conductor_memory/client/: __init__.py  base.py  tools.py
src/conductor_memory/config/: __init__.py  server.py  summarization.py  vector_db.py
src/conductor_memory/core/: __init__.py  embedder.py  models.py  relevance.py  resources.py  vector_store.py
src/conductor_memory/embedding/: __init__.py  sentence_transformer.py
src/conductor_memory/llm/: __init__.py  base.py  lmstudio_client.py  ollama_client.py  summarizer.py
src/conductor_memory/search/: __init__.py  boosting.py  call_graph.py  chunking.py  heuristics.py  hybrid.py  import_graph.py  verification.py
src/conductor_memory/search/parsers/: __init__.py  base.py  conversation_parser.py  domain_detector.py  language_configs.py  tree_sitter_parser.py
src/conductor_memory/server/: __init__.py  bridge.py  chroma_manager.py  sse.py  stdio.py  unified.py  windows_service.py
src/conductor_memory/service/: __init__.py  memory_service.py
src/conductor_memory/storage/: __init__.py  chroma.py  postgres.py  schema.sql
tests/: __init__.py  test_api_performance.py  test_boost_result.json  test_boosting_live.py  test_call_graph.py  test_chroma_direct.py  test_comprehensive_memory_system.py  test_conditional_prompts.py  test_conversation_parser.py  test_csharp_impl_queries.py  test_delete_debug.py  test_delete_debug2.py  test_filter_result.json  test_implementation_queries.py  test_implementation_signals.py  test_incremental_indexing.py  test_mcp_memory_server.py  test_memory_type_enhancements.py  test_multi_codebase.py  test_phase1_boosting.py  test_phase1_integration.py  test_phase2_filtering.py  test_phase2_summaries.py  test_phase5_summary_integration.py  test_queue_summarization.py  test_resources.py  test_search_quality.py  test_service_direct.py  test_simple_file_detection.py  test_sse_store.py  test_structured_summaries.py  test_tree_sitter_basic.py  test_tree_sitter_queries.py  test_typescript_impl_queries.py  test_verification.py
