[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-memory"
version = "1.0.0"
description = "Semantic memory service with codebase indexing for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Joshua"}
]
keywords = ["mcp", "memory", "semantic-search", "vector-database", "chromadb", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "rank_bm25>=0.2.2",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
conductor-memory = "conductor_memory.server.unified:main"
conductor-memory-stdio = "conductor_memory.server.stdio:main"
conductor-memory-sse = "conductor_memory.server.sse:main"

[project.urls]
Homepage = "https://github.com/yourusername/conductor-memory"
Repository = "https://github.com/yourusername/conductor-memory"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
conductor_memory = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
