[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-memory"
version = "1.0.1"
description = "Semantic memory service with codebase indexing for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Joshua"}
]
keywords = ["mcp", "memory", "semantic-search", "vector-database", "chromadb", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "rank_bm25>=0.2.2",
    "requests>=2.28.0",
    "aiohttp>=3.9.0",
    # Tree-sitter for multi-language AST parsing
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-objc>=3.0.0",
    "tree-sitter-typescript>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
windows-service = [
    "pywin32>=306",
]
# PostgreSQL support for fast dashboard queries (optional)
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
conductor-memory = "conductor_memory.server.sse:main"
conductor-memory-stdio = "conductor_memory.server.stdio:main"
conductor-memory-service = "conductor_memory.server.windows_service:main"

[project.urls]
Homepage = "https://github.com/jltx/conductor-memory"
Repository = "https://github.com/jltx/conductor-memory"
Issues = "https://github.com/jltx/conductor-memory/issues"
Documentation = "https://github.com/jltx/conductor-memory#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
conductor_memory = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
